try using a base command line property
Signed-off-by: olivier lamy <oliver.lamy@gmail.com>