@@ -23,7 +23,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine} -Dfile.encoding=UTF-8 -Duser.language=en -Duser.region=US -showversion -Xmx1g -Xms1g -XX:+PrintGCDetails
+            @{argLine} ${surefire.base.argLine}
             --add-modules javax.servlet.api
             --add-modules org.eclipse.jetty.util
             --add-modules org.eclipse.jetty.io
